tests/snapshots/files__range_splitting-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main {
  v0_: bool = const true;
  v1_: int = const 1;
  print v1_;
  br v0_ .v2_ .v3_;
.v2_:
  v4_: int = id v1_;
.v5_:
  v6_: int = const 5;
  v7_: bool = lt v4_ v6_;
  br v7_ .v8_ .v9_;
.v8_:
  v10_: int = const 1;
  print v10_;
  v11_: int = id v4_;
.v12_:
  v13_: int = const 1;
  v14_: int = add v13_ v4_;
  v15_: bool = lt v14_ v6_;
  v4_: int = id v14_;
  br v15_ .v5_ .v16_;
.v16_:
  v17_: int = id v4_;
  jmp .v18_;
.v9_:
  v19_: int = const 2;
  print v19_;
  v11_: int = id v4_;
  jmp .v12_;
.v3_:
  v17_: int = id v1_;
.v18_:
  print v17_;
}
