tests/snapshots/files__range_splitting-rvsdg-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main {
  v1: int = const 5;
  v4: int = const 0;
  v6: int = id v4;
  jmp .__9__;
.__9__:
  v8: int = const 1;
  print v8;
  v14: int = add v8 v6;
  v17: int = const 5;
  v19: bool = lt v14 v17;
  v6: int = id v14;
  br v19 .__9__ .__23__;
.__23__:
  print v1;
}

