tests/snapshots/files__range_splitting-structured.snap
---
source: tests/files.rs
expression: visualization.result
---
main {
block:
 i: int = const 0;
while true:
 block:
  block:
   block:
    a: int = const 5;
    if_cond: bool = lt i a;
    if if_cond:
     break 2
    else:
     break 1
   two: int = const 2;
   print two;
   break 1
  one: int = const 1;
  print one;
 block:
  b: int = const 5;
  loop_cond: bool = lt i b;
  one: int = const 1;
  i: int = add i one;
  if loop_cond:
   break 2
  else:
   break 1
 block:
  print i;
  return

}
