tests/snapshots/files__recurse_once-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@to_zero(v0: int): int {
.b1_:
  c2_: int = const 0;
  v3_: bool = lt c2_ v0;
  v4_: int = id v0;
  br v3_ .b5_ .b6_;
.b5_:
  c7_: int = const 0;
  c8_: int = const 1;
  v9_: int = sub v0 c8_;
  v10_: bool = lt c7_ v9_;
  v11_: int = id v9_;
  br v10_ .b12_ .b13_;
.b12_:
  c14_: int = const 0;
  c15_: int = const 1;
  v16_: int = sub v9_ c15_;
  v17_: bool = lt c14_ v16_;
  v18_: int = id v16_;
  br v17_ .b19_ .b20_;
.b19_:
  c21_: int = const 1;
  v22_: int = sub v16_ c21_;
  v23_: int = call @to_zero v22_;
  v18_: int = id v23_;
  v11_: int = id v18_;
  v4_: int = id v11_;
  ret v4_;
  jmp .b24_;
.b20_:
  v11_: int = id v18_;
  v4_: int = id v11_;
  ret v4_;
  jmp .b24_;
.b13_:
  v4_: int = id v11_;
  ret v4_;
  jmp .b24_;
.b6_:
  ret v4_;
.b24_:
}
@main {
.b0_:
  c1_: int = const 0;
  print c1_;
  ret;
}
