tests/snapshots/files__select-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 20
@main(v0: int) {
.b1_:
  c2_: int = const 5;
  c3_: int = const 10;
<<<<<<< HEAD
  v4_: bool = eq c2_ c3_;
  v5_: bool = not v4_;
  c6_: int = const 0;
  v7_: int = id c6_;
  v8_: int = id c3_;
  v9_: int = id c6_;
  v10_: int = id v0;
  br v5_ .b11_ .b12_;
.b11_:
  v13_: int = id c6_;
  v14_: int = id c3_;
  v15_: int = id c6_;
  v16_: int = id v0;
.b17_:
  c18_: int = const 1;
  v19_: int = add c18_ v15_;
  v20_: int = add v13_ v19_;
  v21_: bool = eq v16_ v19_;
  c22_: int = const 5;
  v23_: int = select v21_ c22_ v14_;
  v24_: bool = eq c22_ v23_;
  v25_: bool = not v24_;
  v13_: int = id v20_;
  v14_: int = id v23_;
  v15_: int = id v19_;
  v16_: int = id v16_;
  br v25_ .b17_ .b26_;
.b26_:
  v7_: int = id v13_;
  v8_: int = id v14_;
  v9_: int = id v15_;
  v10_: int = id v16_;
  print v7_;
=======
  v4_: int = id c2_;
  v5_: int = id c3_;
  v6_: int = id c2_;
  v7_: int = id v0;
.b8_:
  c9_: int = const 5;
  v10_: bool = eq c9_ v5_;
  v11_: bool = not v10_;
  v12_: bool = not v11_;
  v13_: bool = not v12_;
  v14_: int = id v4_;
  v15_: int = id v5_;
  v16_: int = id v6_;
  v17_: int = id v7_;
  br v13_ .b18_ .b19_;
.b18_:
  c20_: int = const 1;
  v21_: int = add c20_ v6_;
  v22_: int = add v21_ v4_;
  v23_: bool = eq v21_ v7_;
  c24_: int = const 5;
  v25_: int = select v23_ c24_ v5_;
  v14_: int = id v22_;
  v15_: int = id v25_;
  v16_: int = id v21_;
  v17_: int = id v7_;
  v4_: int = id v14_;
  v5_: int = id v15_;
  v6_: int = id v16_;
  v7_: int = id v17_;
.b26_:
  br v11_ .b8_ .b27_;
.b19_:
  v4_: int = id v14_;
  v5_: int = id v15_;
  v6_: int = id v16_;
  v7_: int = id v17_;
  jmp .b26_;
.b27_:
  print v4_;
>>>>>>> bd5b3865 (snapshots)
  ret;
  jmp .b27_;
.b12_:
  print v7_;
  ret;
.b27_:
}
